// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a person without tenures 1`] = `
<div>
  <div
    class="mtfh-link-box mtfh-search-person"
  >
    <div
      class="mtfh-search-card"
    >
      <div
        class="mtfh-link-overlay"
      >
        <a
          class="govuk-link lbh-link lbh-link--text-colour lbh-link--no-visited-state"
          href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        >
          Dr. Haylee b Macejkovic
        </a>
      </div>
      <p>
        <strong>
          DOB:
        </strong>
         
        09/10/2015
      </p>
    </div>
  </div>
</div>
`;

exports[`it renders the person card 1`] = `
<div>
  <div
    class="mtfh-link-box mtfh-search-person"
  >
    <div
      class="mtfh-search-card"
    >
      <div
        class="mtfh-link-overlay"
      >
        <a
          class="govuk-link lbh-link lbh-link--text-colour lbh-link--no-visited-state"
          href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        >
          Dr. Haylee b Macejkovic
        </a>
      </div>
      <p>
        <strong>
          Multiple Tenures
        </strong>
      </p>
      <p>
        <strong>
          DOB:
        </strong>
         
        09/10/2015
      </p>
    </div>
  </div>
</div>
`;
